--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="520解说镜像导航网站"/>
+    <meta name="description" content="NAVXX - 2025年最好的成人色情网站导航和免费色情视频网站列表"/>
     <link rel="shortcut icon" href="static/logo.svg" type="image/x-icon">
-    <meta name="keywords" content="镜像导航网站" />
+    <meta name="keywords" content="NAVXX - 2025年最好的成人色情网站导航和免费色情视频网站列表" />
 	<!-- <meta http-equiv='Content-Security-Policy' content='block-all-mixed-content'>  -->
-    <title>520解说镜像导航网站</title>
+    <title>NAVXX - 2025年最好的成人色情网站导航和免费色情视频网站列表</title>
     <link rel="shortcut icon" href="favcion.ico" />
     <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="static/themify-icons.css">
@@ -22,10 +22,10 @@
                 <img src = "static/logo.svg"/>
             </div>
             <div class = "ti-sec">
-                <p>520jieshuo</p> 
+                <p>navxx</p> 
             </div>
             <div class="title">
-                <p>个人导航</p>
+                <p>導航XX</p>
             </div>
             <nav class="nav">
 
