--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <!-- 添加更多链接 -->
                 </ul>
                 <div class="item comment">
-					<p class="icp"><a href="http://beian.miit.gov.cn/">京ICP备xxxxxxxxxxx</a></p>
+					<p class="icp"><a href="https://t.me/JDZDQ">Telegram channel</a></p>
                 </div>
             </nav>
         </aside>
@@ -49,7 +49,7 @@
                 </div>
 				<!-- 说明 -->
 				<div class = "about box">
-				    <p><i class="ti-pencil-alt"></i>本导航页仅供个人使用,纯静态无框架[html+css+js]</P>
+				    <p><i class="ti-pencil-alt"></i>NAVXX is the best porn directory in the world! NAVXX is a collection of free or paid porn sites that share the best content of young beauties and mature women action movies. If you are looking for pornographic content that you can watch on your computer or mobile device, then this site can fulfill all your needs! I'm going to provide you with all the information directly, and that's why people love me so much! I am all about providing you with the best porn sites on the internet today. Like many of us, I was looking for new spanking material on Google one day, but I wasn't happy with the results. Today, there are millions of sites online that offer adult content, but only a small percentage of them are actually worth visiting. Some of these sites have too many viral ads and hidden pop-ups, while others either offer poor quality videos or content that simply can't be used for jerking off.</P>
 				</div>
 
                 <footer class="footer">
