--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <footer class="footer">
                     <div class="copyright">
                         <div>
-                            <p>CopyRight from <a target="_blank" href="https://github.com/geekape/geek-navigation">geekape</a> by abc ©  2020</p>                        
+                            <p>Telegram <a target="_blank" href="https://t.me/JDZDQ">channel</a> </p>                        
                         </div>
                     </div>
                 </footer>
